Patch Pocket update/overhaul to added folded and standradise

--- a/packages/i18n/src/locales/en/optiongroups.yaml
+++ b/packages/i18n/src/locales/en/optiongroups.yaml
@@ -30,6 +30,8 @@ watchPockets: Watch pockets
 inseamPockets: Inseam pockets
 boxPleatPockets: Box Pleat pockets
 pearPockets: Pear shaped pockets
+patchPockets: Patch pockets
+patchPocketsFlaps: Patch pockets flaps
 weltPockets: Welt pockets
 snaps: Snaps
 vents: Vents
